@@ -32,162 +32,114 @@ import ee.ria.xroad.common.CertificationServiceStatus;
 import ee.ria.xroad.common.DiagnosticsStatus;
 import ee.ria.xroad.common.MessageLogEncryptionStatusDiagnostics;
 import ee.ria.xroad.common.OcspResponderStatus;
-import ee.ria.xroad.common.PortNumbers;
-import ee.ria.xroad.common.SystemProperties;
-import ee.ria.xroad.common.util.JsonUtils;
+import ee.ria.xroad.signer.SignerRpcClient;
 
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.niis.xroad.confclient.proto.ConfClientRpcClient;
+import org.niis.xroad.proxy.proto.ProxyRpcClient;
 import org.niis.xroad.restapi.exceptions.DeviationAwareRuntimeException;
 import org.niis.xroad.restapi.exceptions.ErrorDeviation;
-import org.niis.xroad.restapi.service.ServiceException;
 import org.niis.xroad.securityserver.restapi.dto.OcspResponderDiagnosticsStatus;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.web.client.RestTemplateBuilder;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
-import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.client.RestClientException;
-import org.springframework.web.client.RestTemplate;
 
-import java.time.Duration;
-import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import static java.time.Instant.ofEpochMilli;
 import static org.niis.xroad.restapi.exceptions.DeviationCodes.ERROR_DIAGNOSTIC_REQUEST_FAILED;
+import static org.niis.xroad.restapi.util.FormatUtils.fromInstantToOffsetDateTime;
 
 /**
  * diagnostic service
  */
 @Slf4j
 @Service
+@RequiredArgsConstructor
 @Transactional
 @PreAuthorize("isAuthenticated()")
 public class DiagnosticService {
-    private static final int HTTP_CONNECT_TIMEOUT_MS = 1000;
-    private static final int HTTP_CLIENT_TIMEOUT_MS = 60000;
-    private final RestTemplate restTemplate;
-    private final String diagnosticsGlobalconfUrl;
-    private final String diagnosticsTimestampingServicesUrl;
-    private final String diagnosticsOcspRespondersUrl;
-    private final String diagnosticsAddOnStatusUrl;
-    private final String backupEncryptionStatusUrl;
-    private final String messageLogEncryptionStatusUrl;
-
-    @Autowired
-    public DiagnosticService(
-            @Value("${url.diagnostics-globalconf}") String diagnosticsGlobalconfUrl,
-            @Value("${url.diagnostics-timestamping-services}") String diagnosticsTimestampingServicesUrl,
-            @Value("${url.diagnostics-ocsp-responders}") String diagnosticsOcspRespondersUrl,
-            @Value("${url.diagnostics-addon-status}") String diagnosticsAddOnStatusUrl,
-            @Value("${url.diagnostics-backup-encryption-status}") String backupEncryptionStatusUrl,
-            @Value("${url.diagnostics-message-log-encryption-status}") String messageLogEncryptionStatusUrl,
-            RestTemplateBuilder restTemplateBuilder) {
-
-        this.diagnosticsGlobalconfUrl = String.format(diagnosticsGlobalconfUrl,
-                SystemProperties.getConfigurationClientAdminPort());
-        this.diagnosticsTimestampingServicesUrl = String.format(diagnosticsTimestampingServicesUrl,
-                PortNumbers.ADMIN_PORT);
-        this.diagnosticsOcspRespondersUrl = String.format(diagnosticsOcspRespondersUrl,
-                SystemProperties.getSignerAdminPort());
-        this.diagnosticsAddOnStatusUrl = String.format(diagnosticsAddOnStatusUrl, PortNumbers.ADMIN_PORT);
-        this.backupEncryptionStatusUrl = String.format(backupEncryptionStatusUrl,
-                PortNumbers.ADMIN_PORT);
-        this.messageLogEncryptionStatusUrl = String.format(messageLogEncryptionStatusUrl,
-                PortNumbers.ADMIN_PORT);
-
-        MappingJackson2HttpMessageConverter converter = new MappingJackson2HttpMessageConverter(
-                JsonUtils.getObjectMapperCopy());
-        List<MediaType> mediaTypes = new ArrayList<>(converter.getSupportedMediaTypes());
-        mediaTypes.add(MediaType.APPLICATION_OCTET_STREAM);
-        converter.setSupportedMediaTypes(mediaTypes);
-        this.restTemplate = restTemplateBuilder
-                .setConnectTimeout(Duration.ofMillis(HTTP_CONNECT_TIMEOUT_MS))
-                .setReadTimeout(Duration.ofMillis(HTTP_CLIENT_TIMEOUT_MS))
-                .messageConverters(converter)
-                .build();
-    }
+    private final SignerRpcClient signerRpcClient;
+    private final ProxyRpcClient proxyRpcClient;
+    private final ConfClientRpcClient confClientRpcClient;
 
     /**
      * Query global configuration status from admin port over HTTP.
      *
-     * @return
+     * @return DiagnosticsStatus
      */
     public DiagnosticsStatus queryGlobalConfStatus() {
         try {
-            ResponseEntity<DiagnosticsStatus> response = sendGetRequest(diagnosticsGlobalconfUrl,
-                    DiagnosticsStatus.class);
+            var status = confClientRpcClient.getStatus();
+            return new DiagnosticsStatus(status.getReturnCode(),
+                    status.hasPrevUpdate() ? fromInstantToOffsetDateTime(ofEpochMilli(status.getPrevUpdate())) : null,
+                    status.hasNextUpdate() ? fromInstantToOffsetDateTime(ofEpochMilli(status.getNextUpdate())) : null,
+                    status.getDescription());
 
-            return response.getBody();
-        } catch (DiagnosticRequestException e) {
-            throw new DeviationAwareRuntimeException(e, e.getErrorDeviation());
+        } catch (Exception e) {
+            throw new DeviationAwareRuntimeException(e, new ErrorDeviation(ERROR_DIAGNOSTIC_REQUEST_FAILED));
         }
     }
 
     /**
      * Query timestamping services status from admin port over HTTP.
      *
-     * @return
+     * @return DiagnosticsStatus
      */
     public Set<DiagnosticsStatus> queryTimestampingStatus() {
         log.info("Query timestamper status");
         try {
-            ResponseEntity<TimestampingStatusResponse> response = sendGetRequest(diagnosticsTimestampingServicesUrl,
-                    TimestampingStatusResponse.class);
+            Map<String, DiagnosticsStatus> response = proxyRpcClient.getTimestampingStatus();
 
-            return Objects.requireNonNull(response.getBody())
+            return Objects.requireNonNull(response)
                     .entrySet().stream()
                     .map(diagnosticsStatusEntry -> {
                         DiagnosticsStatus diagnosticsStatus = diagnosticsStatusEntry.getValue();
                         diagnosticsStatus.setDescription(diagnosticsStatusEntry.getKey());
                         return diagnosticsStatus;
                     }).collect(Collectors.toSet());
-        } catch (DiagnosticRequestException e) {
-            throw new DeviationAwareRuntimeException(e, e.getErrorDeviation());
+        } catch (Exception e) {
+            throw new DeviationAwareRuntimeException(e, new ErrorDeviation(ERROR_DIAGNOSTIC_REQUEST_FAILED));
         }
     }
 
     /**
      * Query ocsp responders status from admin port over HTTP.
      *
-     * @return
+     * @return OcspResponderDiagnosticsStatus
      */
     public List<OcspResponderDiagnosticsStatus> queryOcspResponderStatus() {
         log.info("Query OCSP status");
         try {
-            ResponseEntity<CertificationServiceDiagnostics> response = sendGetRequest(diagnosticsOcspRespondersUrl,
-                    CertificationServiceDiagnostics.class);
+            CertificationServiceDiagnostics response = signerRpcClient.getCertificationServiceDiagnostics();
 
-            return Objects.requireNonNull(response.getBody())
+            return Objects.requireNonNull(response)
                     .getCertificationServiceStatusMap()
                     .entrySet()
                     .stream()
                     .map(this::parseOcspResponderDiagnosticsStatus)
-                    .collect(Collectors.toList());
-        } catch (DiagnosticRequestException e) {
-            throw new DeviationAwareRuntimeException(e, e.getErrorDeviation());
+                    .toList();
+        } catch (Exception e) {
+            throw new DeviationAwareRuntimeException(e.getMessage(),
+                    new ErrorDeviation(ERROR_DIAGNOSTIC_REQUEST_FAILED));
         }
     }
 
     /**
      * Query proxy addons status from admin port over HTTP.
      *
-     * @return
+     * @return AddOnStatusDiagnostics
      */
     public AddOnStatusDiagnostics queryAddOnStatus() {
         try {
-            return sendGetRequest(diagnosticsAddOnStatusUrl, AddOnStatusDiagnostics.class).getBody();
-        } catch (DiagnosticRequestException e) {
-            throw new DeviationAwareRuntimeException(e, e.getErrorDeviation());
+            return proxyRpcClient.getAddOnStatus();
+        } catch (Exception e) {
+            throw new DeviationAwareRuntimeException(e, new ErrorDeviation(ERROR_DIAGNOSTIC_REQUEST_FAILED));
         }
     }
 
@@ -198,9 +150,9 @@ public class DiagnosticService {
      */
     public BackupEncryptionStatusDiagnostics queryBackupEncryptionStatus() {
         try {
-            return sendGetRequest(backupEncryptionStatusUrl, BackupEncryptionStatusDiagnostics.class).getBody();
-        } catch (DiagnosticRequestException e) {
-            throw new DeviationAwareRuntimeException(e, e.getErrorDeviation());
+            return proxyRpcClient.getBackupEncryptionStatus();
+        } catch (Exception e) {
+            throw new DeviationAwareRuntimeException(e, new ErrorDeviation(ERROR_DIAGNOSTIC_REQUEST_FAILED));
         }
     }
 
@@ -211,38 +163,14 @@ public class DiagnosticService {
      */
     public MessageLogEncryptionStatusDiagnostics queryMessageLogEncryptionStatus() {
         try {
-            return sendGetRequest(messageLogEncryptionStatusUrl, MessageLogEncryptionStatusDiagnostics.class).getBody();
-        } catch (DiagnosticRequestException e) {
-            throw new DeviationAwareRuntimeException(e, e.getErrorDeviation());
+            return proxyRpcClient.getMessageLogEncryptionStatus();
+        } catch (Exception e) {
+            throw new DeviationAwareRuntimeException(e, new ErrorDeviation(ERROR_DIAGNOSTIC_REQUEST_FAILED));
         }
     }
 
     /**
-     * Send HTTP GET request to the given address (http://localhost:{port}/{path}).
-     *
-     * @param address
-     * @return ResponseEntity with the provided type
-     * @throws DiagnosticRequestException if sending a diagnostics requests fails or an error is returned
-     */
-    private <T> ResponseEntity<T> sendGetRequest(String address, Class<T> clazz) throws DiagnosticRequestException {
-        try {
-            ResponseEntity<T> response = restTemplate.getForEntity(address, clazz);
-
-            if (response.getStatusCode() == HttpStatus.INTERNAL_SERVER_ERROR
-                    || response.getBody() == null) {
-                log.error("unable to get a response");
-                throw new DiagnosticRequestException();
-            }
-
-            return response;
-        } catch (RestClientException e) {
-            log.error("unable to connect to admin port (" + address + ")", e);
-            throw new DiagnosticRequestException();
-        }
-    }
-
-    /**
-     * Parse parse OcspResponderDiagnosticsStatus representing a certificate authority including the ocsp services
+     * Parse OcspResponderDiagnosticsStatus representing a certificate authority including the ocsp services
      * of the certificate authority
      *
      * @param entry
@@ -266,15 +194,4 @@ public class DiagnosticService {
         return status;
     }
 
-    /**
-     * Thrown when trying to send a diagnostic request
-     */
-    public static final class DiagnosticRequestException extends ServiceException {
-        public DiagnosticRequestException() {
-            super(new ErrorDeviation(ERROR_DIAGNOSTIC_REQUEST_FAILED));
-        }
-    }
-
-    private static final class TimestampingStatusResponse extends HashMap<String, DiagnosticsStatus> {
-    }
 }
