@@ -26,14 +26,13 @@
 package ee.ria.xroad.proxy.conf;
 
 import ee.ria.xroad.common.ExpectedCodedException;
-import ee.ria.xroad.common.SystemProperties;
 import ee.ria.xroad.common.conf.globalconf.EmptyGlobalConf;
 import ee.ria.xroad.common.conf.globalconf.GlobalConfProvider;
 import ee.ria.xroad.common.conf.serverconf.CachingServerConfImpl;
 import ee.ria.xroad.common.conf.serverconf.IsAuthentication;
-import ee.ria.xroad.common.conf.serverconf.ServerConfDatabaseCtx;
 import ee.ria.xroad.common.conf.serverconf.ServerConfProvider;
 import ee.ria.xroad.common.conf.serverconf.dao.ServiceDAOImpl;
+import ee.ria.xroad.common.db.DatabaseCtxV2;
 import ee.ria.xroad.common.identifier.ClientId;
 import ee.ria.xroad.common.identifier.SecurityServerId;
 import ee.ria.xroad.common.identifier.ServiceId;
@@ -48,7 +47,6 @@ import org.junit.Test;
 
 import java.security.cert.X509Certificate;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static ee.ria.xroad.common.ErrorCodes.X_UNKNOWN_SERVICE;
@@ -71,6 +69,7 @@ import static ee.ria.xroad.proxy.conf.TestUtil.client;
 import static ee.ria.xroad.proxy.conf.TestUtil.createTestClientId;
 import static ee.ria.xroad.proxy.conf.TestUtil.createTestServiceId;
 import static ee.ria.xroad.proxy.conf.TestUtil.prepareDB;
+import static ee.ria.xroad.proxy.conf.TestUtil.serverConfProperties;
 import static ee.ria.xroad.proxy.conf.TestUtil.service;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
@@ -89,6 +88,7 @@ public class CachingServerConfTest {
 
     private static GlobalConfProvider globalConfProvider;
     private static ServerConfProvider serverConfProvider;
+    private static DatabaseCtxV2 databaseCtx;
 
     /**
      * Creates test database.
@@ -97,15 +97,16 @@ public class CachingServerConfTest {
      */
     @BeforeClass
     public static void setUpBeforeClass() throws Exception {
-        prepareDB();
-
         globalConfProvider = new EmptyGlobalConf() {
             @Override
             public boolean isSecurityServerClient(ClientId client, SecurityServerId securityServer) {
                 return true;
             }
         };
-        serverConfProvider = new CachingServerConfImpl(globalConfProvider, SystemProperties.getServerConfCachePeriod());
+        databaseCtx = TestUtil.databaseCtx;
+        serverConfProvider = new CachingServerConfImpl(databaseCtx, serverConfProperties, globalConfProvider);
+
+        prepareDB(databaseCtx);
     }
 
     /**
@@ -113,7 +114,7 @@ public class CachingServerConfTest {
      */
     @Before
     public void beforeTest() {
-        ServerConfDatabaseCtx.get().beginTransaction();
+        databaseCtx.beginTransaction();
     }
 
     /**
@@ -121,7 +122,7 @@ public class CachingServerConfTest {
      */
     @After
     public void afterTest() {
-        ServerConfDatabaseCtx.get().commitTransaction();
+        databaseCtx.commitTransaction();
     }
 
     /**
@@ -189,7 +190,7 @@ public class CachingServerConfTest {
         ClientId client1 = createTestClientId(client(1));
         ClientId client2 = createTestClientId(client(2));
 
-        List<ServiceId> expectedServices = Arrays.asList(
+        List<ServiceId> expectedServices = List.of(
                 createTestServiceId(serviceProvider,
                         service(1, 1), SERVICE_VERSION));
 
@@ -281,7 +282,7 @@ public class CachingServerConfTest {
         List<X509Certificate> isCerts =
                 serverConfProvider.getIsCerts(createTestClientId(client(1)));
         assertEquals(1, isCerts.size());
-        assertEquals(CryptoUtils.readCertificate(BASE64_CERT), isCerts.get(0));
+        assertEquals(CryptoUtils.readCertificate(BASE64_CERT), isCerts.getFirst());
     }
 
     /**
@@ -316,11 +317,9 @@ public class CachingServerConfTest {
 
     /**
      * Tests getting TSPs.
-     *
-     * @throws Exception if an error occurs
      */
     @Test
-    public void getTsps() throws Exception {
+    public void getTsps() {
         List<String> tspUrls = serverConfProvider.getTspUrl();
         assertEquals(NUM_TSPS, tspUrls.size());
     }
@@ -335,11 +334,9 @@ public class CachingServerConfTest {
 
     /**
      * Tests getting services.
-     *
-     * @throws Exception if an error occurs
      */
     @Test
-    public void getServices() throws Exception {
+    public void getServices() {
         ClientId serviceProvider = createTestClientId(client(1), null);
 
         List<ServiceId.Conf> allServices = getServices(serviceProvider);
@@ -359,7 +356,7 @@ public class CachingServerConfTest {
 
     private static List<ServiceId.Conf> getServices(ClientId serviceProvider) {
         return new ServiceDAOImpl().getServices(
-                ServerConfDatabaseCtx.get().getSession(),
+                databaseCtx.getSession(),
                 serviceProvider);
     }
 }
